[project]
name = "nlp-utils"
version = "0.1.1"
description = "A utility library package for common NLP routines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.28.1",
    "litellm>=1.40",
    "lxml>=6.0.2",
    "markdownify>=0.12",
    "nltk>=3.8",
    "pypdf>=4.0",
    "python-dateutil>=2.8",
    "youtube-transcript-api>=0.6",
    "yt-dlp>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_utils"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
